# gh-llm_client

./: .env.sample  .gitignore  README.md  poetry_run.cmd  pyproject.toml  settings.json  streamlit_app copy 2.py  streamlit_app copy 3.py  streamlit_app copy.py  streamlit_app.py  todo.md  windows_run.cmd
app/: main.py  streamlit_app.py  utils.py
app/chat_strategies/: anthropic_strategy.py  chat_model_strategy.py  deepseeker_strategy.py  gemini_strategy.py  llama_strategy.py  model.py  openai_strategy.py
app/interfaces/: chat_tab.py  context_tab.py  log_tab.py  settings_sidebar.py
app/managers/: chat_history_manager.py  file_manager.py  log_manager.py  settings_manager.py
app/utils/: constants.py
docs/en/: INSTALLATION.md  README.md
docs/ru/: INSTALLATION.md  README.md  llm_parameters_info.md
settings/: default_settings.json  example_settings_1.json  settings.json
