[tool.poetry]
name = "my-streamlit-app"
version = "0.1.0"
description = ""
authors = ["kolommik <mikhail.kolomasov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
openai = "^1.17.1"
python-dotenv = "^1.0.1"
tiktoken = "^0.6.0"
markdown = "^3.6"
anthropic = "^0.25.7"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
