[tool.poetry]
name = "LLM Streamlit Chat"
version = "1.0.0"
description = ""
authors = ["kolommik <mikhail.kolomasov@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
openai = "^1.53.0"
python-dotenv = "^1.0.1"
tiktoken = "^0.8.0"
markdown = "^3.6"
anthropic = "^0.38.0"
google-generativeai = "^0.8.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
